[package]
name = "discord_bot_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
serenity = { version="0.11.5", default-features = false, features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "native_tls_backend",
]}
tokio = { version = "1.21.2", features = ["full"] }
